Most of the grunt work of the report is done.  Just need to do the background and implementation stuff now

--- a/report/my_style.tex
+++ b/report/my_style.tex
@@ -1,4 +1,7 @@
 \usepackage[top=1in,right=1in,left=1in,bottom=1in]{geometry}
+\usepackage{fancyhdr}
+\usepackage[gnu]{newtitle}
+\usepackage[grey,times]{honoursThesis}
 
 \lstset{
   basicstyle=\scriptsize
